; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/light/extr_isl29028.c_isl29028_set_pm_runtime_busy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/light/extr_isl29028.c_isl29028_set_pm_runtime_busy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isl29028_chip = type { i32 }
%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.isl29028_chip*, i32)* @isl29028_set_pm_runtime_busy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @isl29028_set_pm_runtime_busy(%struct.isl29028_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.isl29028_chip*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca i32, align 4
  store %struct.isl29028_chip* %0, %struct.isl29028_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.isl29028_chip*, %struct.isl29028_chip** %3, align 8
  %8 = getelementptr inbounds %struct.isl29028_chip, %struct.isl29028_chip* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.device* @regmap_get_device(i32 %9)
  store %struct.device* %10, %struct.device** %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %2
  %14 = load %struct.device*, %struct.device** %5, align 8
  %15 = call i32 @pm_runtime_get_sync(%struct.device* %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = load %struct.device*, %struct.device** %5, align 8
  %20 = call i32 @pm_runtime_put_noidle(%struct.device* %19)
  br label %21

21:                                               ; preds = %18, %13
  br label %27

22:                                               ; preds = %2
  %23 = load %struct.device*, %struct.device** %5, align 8
  %24 = call i32 @pm_runtime_mark_last_busy(%struct.device* %23)
  %25 = load %struct.device*, %struct.device** %5, align 8
  %26 = call i32 @pm_runtime_put_autosuspend(%struct.device* %25)
  store i32 %26, i32* %6, align 4
  br label %27

27:                                               ; preds = %22, %21
  %28 = load i32, i32* %6, align 4
  ret i32 %28
}

declare dso_local %struct.device* @regmap_get_device(i32) #1

declare dso_local i32 @pm_runtime_get_sync(%struct.device*) #1

declare dso_local i32 @pm_runtime_put_noidle(%struct.device*) #1

declare dso_local i32 @pm_runtime_mark_last_busy(%struct.device*) #1

declare dso_local i32 @pm_runtime_put_autosuspend(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
